<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <View
                android:id="@+id/top_view"
                android:layout_width="match_parent"
                android:layout_height="347dp"
                android:background="@drawable/bg_view" />

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/city"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/main_weather_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@id/city"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-15dp"
                android:src="@drawable/rain" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_weather_image"
                android:gravity="center_horizontal"
                android:text="@string/_25_c"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/feels_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/temperature"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/feels_like"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/feels_like"
                android:gravity="center_horizontal"
                android:text="@string/wind_speed"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wind_speed"
                android:gravity="center_horizontal"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/top_view"
                android:gravity="center_horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_1"
                    android:layout_width="100sp"
                    android:layout_height="150sp"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/card_image"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/sun" />

                        <TextView
                            android:id="@+id/card_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/_25_c" />

                        <TextView
                            android:id="@+id/card_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/_30_02_2022" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_2"
                    android:layout_width="100sp"
                    android:layout_height="150sp"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/card_image"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/sun"
                            tools:ignore="DuplicateIds" />

                        <TextView
                            android:id="@+id/card_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/_25_c"
                            tools:ignore="DuplicateIds" />

                        <TextView
                            android:id="@+id/card_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/_30_02_2022"
                            tools:ignore="DuplicateIds" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_3"
                    android:layout_width="100sp"
                    android:layout_height="150sp"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/card_image"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/sun"
                            tools:ignore="DuplicateIds" />

                        <TextView
                            android:id="@+id/card_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/_25_c"
                            tools:ignore="DuplicateIds" />

                        <TextView
                            android:id="@+id/card_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/_30_02_2022"
                            tools:ignore="DuplicateIds" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
